--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^7.2.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
