--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "cookies-next": "^2.1.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "js-cookie": "^3.0.5",
     "mongoose": "^7.2.0",
     "next": "13.4.2",
     "next-connect": "^1.0.0",
