--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "mongoose": "^7.2.0",
-    "next": "13.4.2",
+    "next": "^13.4.7",
     "next-connect": "^1.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
