--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookies-next": "^2.1.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.0",
     "next": "^13.4.7",
     "next-connect": "^1.0.0",
@@ -31,6 +32,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
