--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
